[gd_scene load_steps=6 format=2]

[ext_resource path="res://ressources/img/InSpaceBullet.png" type="Texture" id=1]
[ext_resource path="res://ressources/img/OnPlanetBullet.png" type="Texture" id=2]
[ext_resource path="res://scripts/Bullet.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.87342, 1.39113 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "InSpace",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "OnPlanet",
"speed": 5.0
} ]

[node name="Bullet" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 0.0550001 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.5 )
rotation = 1.5708
frames = SubResource( 2 )
animation = "InSpace"

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Bullet_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
